feat(user): create update user current limit (admin only) endpoint
