# docs/swagger.json
@@ -687,6 +687,63 @@
                     }
                 }
             }
+        },
+        "/users/{uuid}/current-limit": {
+            "post": {
+                "security": [
+                    {
+                        "OAuth2Password": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Update user current limit (admin only)",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User UUID",
+                        "name": "uuid",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "payload",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.UpdateCurrentLimitReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/dto.BaseJSONResp"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/dto.UpdateCurrentLimitRespData"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -796,6 +853,9 @@
                 "birthplace": {
                     "type": "string"
                 },
+                "current_limit": {
+                    "type": "integer"
+                },
                 "current_salary": {
                     "type": "integer"
                 },
@@ -837,6 +897,9 @@
                 "birthplace": {
                     "type": "string"
                 },
+                "current_limit": {
+                    "type": "integer"
+                },
                 "current_salary": {
                     "type": "integer"
                 },
@@ -877,6 +940,9 @@
                 },
                 "birthplace": {
                     "type": "string"
+                },
+                "current_limit": {
+                    "type": "integer"
                 },
                 "current_salary": {
                     "type": "integer"
@@ -1049,6 +1115,25 @@
                 }
             }
         },
+        "dto.UpdateCurrentLimitReq": {
+            "type": "object",
+            "required": [
+                "current_limit"
+            ],
+            "properties": {
+                "current_limit": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dto.UpdateCurrentLimitRespData": {
+            "type": "object",
+            "properties": {
+                "current_limit": {
+                    "type": "integer"
+                }
+            }
+        },
         "dto.UpdateUserReq": {
             "type": "object",
             "properties": {
@@ -1093,6 +1178,9 @@
                 },
                 "birthplace": {
                     "type": "string"
+                },
+                "current_limit": {
+                    "type": "integer"
                 },
                 "current_salary": {
                     "type": "integer"
@@ -1172,6 +1260,9 @@
                 },
                 "birthplace": {
                     "type": "string"
+                },
+                "current_limit": {
+                    "type": "integer"
                 },
                 "current_salary": {
                     "type": "integer"
